--- a/src/OfficeTransliterator/OfficeTransliteratorWeb/OfficeTransliteratorWeb.csproj
+++ b/src/OfficeTransliterator/OfficeTransliteratorWeb/OfficeTransliteratorWeb.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\office-transliterator.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -73,6 +74,8 @@
     <Content Include="App\Home\Home.js" />
     <Content Include="Content\Office.css" />
     <Content Include="Images\Close.png" />
+    <Content Include="Images\Icon.png" />
+    <Content Include="Images\LargeIcon.png" />
     <Content Include="packages.config" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
